--- a/index.html
+++ b/index.html
@@ -2,12 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-tmc.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!-- Primary Meta Tags -->
     <title>TMC Solutions</title>
+    <meta name="title" content="TMC Solutions">
+    <meta name="description" content="Suministro y transporte de agua potable e industrial">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tmc-solutions.com.mx/">
+    <meta property="og:title" content="TMC Solutions">
+    <meta property="og:description" content="Suministro y transporte de agua potable e industrial">
+    <meta property="og:image" content="https://i.postimg.cc/7LxrWKJR/TMC-Solutions.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://tmc-solutions.com.mx/">
+    <meta property="twitter:title" content="TMC Solutions">
+    <meta property="twitter:description" content="Suministro y transporte de agua potable e industrial">
+<meta property="twitter:image" content="https://i.postimg.cc/7LxrWKJR/TMC-Solutions.png">
   </head>
   <body>
     <div id="root"></div>
